# op-rs

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  Justfile  README.md
.github/workflows/: check.yml  release.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/cli/: default.rs  mod.rs  parser.rs
cli/src/time_entry/: command.rs  mod.rs
cli/src/timesheet/: command.rs
lib/: Cargo.toml  GENERATED_README.md  Justfile  README.md
lib/.codegen/c/: cbindgen.toml
lib/.codegen/rust/: spec.json  spec.yml  valid.json
lib/docs/: ActivitiesApi.md  ActivityModel.md  AddWatcherRequest.md  AttachmentModelLinksAuthor.md  AttachmentModelLinksDelete.md  AttachmentsApi.md  BudgetModel.md  BudgetModelLinks.md  CategoriesApi.md  CategoryModel.md  CategoryModelLinks.md  CategoryModelLinksSelf.md  CollectionModel.md  CollectionModelLinksSelf.md  CommentWorkPackageRequest.md  ConfigurationApi.md  ConfigurationModel.md  CreateViewsRequest.md  CreateViewsRequestLinksQuery.md  CustomActionModel.md  CustomActionsApi.md  CustomOptionModel.md  CustomOptionsApi.md  DayCollectionModel.md  DayCollectionModelAllOfEmbedded.md  DayCollectionModelAllOfLinksSelf.md  DayModelLinks.md  DocumentModel.md  DocumentModelLinksProject.md  DocumentModelLinksSelf.md  ErrorResponse.md  ExecuteCustomActionRequest.md  ExecuteCustomActionRequestLinks.md  ExecuteCustomActionRequestLinksWorkPackage.md  FileLinkCollectionReadModel.md  FileLinkCollectionReadModelAllOfEmbedded.md  FileLinkCollectionReadModelAllOfLinks.md  FileLinkCollectionReadModelAllOfLinksSelf.md  FileLinkCollectionWriteModel.md  FileLinkOriginDataModel.md  (+223 more)
lib/src/: lib.rs
lib/src/apis/: actions_capabilities_api.rs  activities_api.rs  attachments_api.rs  budgets_api.rs  categories_api.rs  collections_api.rs  configuration.rs  configuration_api.rs  custom_actions_api.rs  custom_options_api.rs  documents_api.rs  file_links_api.rs  forms_api.rs  grids_api.rs  groups_api.rs  help_texts_api.rs  meetings_api.rs  memberships_api.rs  mod.rs  news_api.rs  notifications_api.rs  o_auth2_api.rs  posts_api.rs  previewing_api.rs  principals_api.rs  priorities_api.rs  projects_api.rs  queries_api.rs  query_columns_api.rs  query_filter_instance_schema_api.rs  query_filters_api.rs  query_operators_api.rs  query_sort_bys_api.rs  relations_api.rs  revisions_api.rs  roles_api.rs  root_api.rs  schemas_api.rs  statuses_api.rs  time_entries_api.rs  (+10 more)
lib/src/config/: mod.rs
lib/src/models/: activity_model.rs  add_watcher_request.rs  attachment_model.rs  attachment_model__links.rs  attachment_model__links_author.rs  attachment_model__links_container.rs  attachment_model__links_delete.rs  attachment_model__links_download_location.rs  attachment_model__links_self.rs  attachments_model.rs  attachments_model_all_of__embedded.rs  attachments_model_all_of__embedded_elements_inner.rs  attachments_model_all_of__links.rs  attachments_model_all_of__links_self.rs  budget_model.rs  budget_model__links.rs  budget_model__links_self.rs  category_model.rs  category_model__links.rs  category_model__links_default_assignee.rs  category_model__links_project.rs  category_model__links_self.rs  collection_model.rs  collection_model__links.rs  collection_model__links_self.rs  comment_work_package_request.rs  configuration_model.rs  create_views_request.rs  create_views_request__links.rs  create_views_request__links_query.rs  custom_action_model.rs  custom_action_model__links.rs  custom_action_model__links_execute_immediately.rs  custom_action_model__links_self.rs  custom_option_model.rs  custom_option_model__links.rs  custom_option_model__links_self.rs  day_collection_model.rs  day_collection_model_all_of__embedded.rs  day_collection_model_all_of__links.rs  (+421 more)
lib/src/time_entry/: activity.rs  mod.rs  time_entry.rs
lib/src/utils/: date.rs
