[package]
name = "openproject-client-lib"
version = "0.0.0"
description = "OpenProject (C) client library"
repository = "https://github.com/HMG-Software/op-rs"
homepage = "https://github.com/HMG-Software/op-rs/tree/master/lib"
license = "GPL-3.0-only"
authors = [
    "Christoph Kröppl <ch.kroeppl@gmx.at>",
    "HMG Software LLC <git@hmg.software>",
]
edition = "2021"
publish = true
keywords = ["abi", "ffi", "libopc", "op", "openproject"]
categories = ["development-tools", "database"]

[dependencies]
reqwest = "0"

[dev-dependencies]
clippy = "*"

[lib]
crate-type = ["cdylib"]
name = "opc" # "lib" gets prepended by cargo

[[bin]]
name = "libopc"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = true
strip = true
