[package]
name = "openproject-client-lib"
version = "0.0.0"
description = "OpenProject (C) client library"
documentation = "https://docs.rs/openproject-client-lib"
homepage = "https://github.com/HMG-Software/op-rs/tree/master/lib"
repository = "https://github.com/HMG-Software/op-rs"
readme = "README.md"
resolve = "2"
license = "GPL-3.0-only"
authors = [
    "Christoph Kröppl <ch.kroeppl@gmx.at>",
    "HMG Software LLC <git@hmg.software>",
]
edition = "2021"
publish = true
keywords = ["abi", "ffi", "libopc", "op", "openproject"]
categories = ["development-tools", "database"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
de_env = "1"
diff-struct = "^0.5"
dirs = { version = "5", optional = true }
iso8601 = "0"
reqwest = { version = "^0.11", features = ["json", "multipart"] }
serde = "1"
serde_derive = "1"
serde-inline-default = "0.2"
serde_json = "1"
serde_with = "^2"
basic-toml = "^0.1"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }

[dev-dependencies]
clippy = "*"
schematools-cli = "0"

[build-dependencies]
cbindgen = "0"

[features]
default = []
config = ["dep:dirs"]
cache = ["dep:dirs"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "opc" # "lib" gets prepended by cargo

[[bin]]
name = "libopc"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = true
strip = true

[target.universal2-apple-darwin.build-dependencies]
cargo-zigbuild = "0"
